infrastructure/base/monitoring/monitoring.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: monitoring-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-http
  namespace: monitoring-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`monitor.winetree94.com`) || Host(`telemetry.winetree94.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: monitoring-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https
  namespace: monitoring-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
    - cloudflare
  routes:
    - match: Host(`monitor.winetree94.com`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: letsencrypt-cert
