infrastructure/base/monitoring/monitoring.grafana-oidc.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-monitoring-grafana-oidc
  namespace: monitoring-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: issuary-system
            app: issuary
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
